k8s/aut-sys/apps/homepage/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.middlewares: >-
      traefik-compress@kubernetescrd,
      traefik-redirect-tls@kubernetescrd,
      traefik-secure-headers@kubernetescrd
spec:
  ingressClassName: haproxy
  tls:
    - secretName: tls-li.lly.sh
      hosts:
        - li.lly.sh
        - lly.sh
        - ftsell.de
  rules:
    - host: li.lly.sh
      http: &http
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website
                port:
                  name: http
          - path: /pixelflut.sock
            pathType: Exact
            backend:
              service:
                name: pixeldike-intern
                port:
                  name: pixelflut-ws
          - path: /stream/
            pathType: Prefix
            backend:
              service:
                name: mediamtx
                port:
                  name: http
          - path: /verysecretriddles
            pathType: Prefix
            backend:
              service:
                name: website-riddles
                port:
                  name: http
    - host: lly.sh
      http: *http
    - host: ftsell.de
      http: *http
